--- a/src/locales/en/summary.json
+++ b/src/locales/en/summary.json
@@ -94,7 +94,7 @@
   },
   "fileDetails": {
     "title": "File Details",
-    "topLargeFiles": "Top Large Files",
+    "topLargeFiles": "Largest Files",
     "fileName": "File Name",
     "size": "Size",
     "lines": "Lines",
@@ -140,6 +140,7 @@
   },
   "bestPractices": {
     "title": "Best Practices",
+    "expandHint": "Click to expand",
     "keepSmall": "Keep PRs small and focused",
     "splitLogical": "Split large changes into logical commits",
     "documentChanges": "Document significant changes in commit messages",
