**変更内容** - `src/summary/summary-writer.ts:26` GitHub Actions Summary書き込みを `ResultAsync<void, Error>` で包み、失敗時メッセージを一元化しつつ成功時のバイト数ログを維持。 - `src/summary/summary-writer.ts:127` Summary生成後の書き込みでも neverthrow を活用し、警告ログを `mapErr` で一貫処理。 - `src/index.ts:6` ドラフトPRのサマリー書き込み時に警告ログを追加し、`ResultAsync` の成功/失敗を分岐。 - `src/locales/en/logs.json`/`src/locales/ja/logs.json` に `draft.summaryWriteFailed` を追加し、失敗メッセージを多言語対応。 - `dist/index.js` / `dist/index.js.map` は `mise ci` に伴い再生成。
**テスト**
- `mise ci`

--- a/src/locales/en/logs.json
+++ b/src/locales/en/logs.json
@@ -73,7 +73,8 @@
   },
   "draft": {
     "skipping": "Skipping draft PR as skip_draft_pr is enabled",
-    "summaryWritten": "Summary written for draft PR"
+    "summaryWritten": "Summary written for draft PR",
+    "summaryWriteFailed": "Failed to write draft PR summary: {{message}}"
   },
   "violations": {
     "detected": "Violations detected:",
