refactor: improve code quality and test coverage
**Changes**:
- Refactored constant definitions using `as const` for type safety
- Created shared pattern validator utility with Result<T,E>
- Integrated pattern-validator into transformers for detailed error messages
- Added i18n error message keys for configuration validation
- Added comprehensive tests for pattern-validator (24 test cases)
- Added workflow stage tests (analysis, finalization, labeling)
- Added additional integration tests

**Quality Assurance**:
- Lint: ✅ Pass
- Type-check: ✅ Pass (0 errors)
- Test: ✅ 748 tests pass
- Build: ✅ Pass
- Coverage: 86.18% → 92.22% (+6.04 points)

**Files**:
- src/config/transformers/labeler-config-transformer.ts: Type-safe constants
- src/utils/pattern-validator.ts: Shared validation utility
- src/locales/{en,ja}/errors.json: i18n error keys
- __tests__/pattern-validator.test.ts: Pattern validator tests
- __tests__/workflow/*.test.ts: Workflow stage tests
- dist/*: Latest build artifacts

--- a/src/locales/en/errors.json
+++ b/src/locales/en/errors.json
@@ -1,9 +1,17 @@
 {
   "configuration": {
     "invalidLanguage": "Invalid language code: {{code}}. Falling back to English.",
+    "invalidLanguageFormat": "language must start with 'en' or 'ja' (e.g., 'en', 'en-US', 'ja', 'ja-JP')",
     "invalidField": "Invalid configuration field: {{field}}",
     "parsingFailed": "Failed to parse configuration: {{message}}",
-    "invalidValue": "Invalid value for {{field}}: {{value}}"
+    "invalidValue": "Invalid value for {{field}}: {{value}}",
+    "mustBeObject": "Configuration must be an object",
+    "mustBeString": "{{field}} must be a string",
+    "mustBeBoolean": "{{field}} must be a boolean",
+    "mustBeNumber": "{{field}} must be a number",
+    "mustBeArray": "{{field}} must be an array",
+    "mustBeNonNegativeInteger": "{{field}} must be a non-negative integer",
+    "thresholdOrderViolation": "{{field}}.{{lower}} ({{lowerValue}}) must be less than {{upper}} ({{upperValue}})"
   },
   "github": {
     "apiError": "GitHub API error: {{message}}",
