**主な対応** - `src/file-metrics.ts:289` で集計ロジックを刷新し、除外ファイルの追加行数を `excludedAdditions` に切り出しつつ、`totalAdditions` は解析成功ファイルのみを積算するように修正しました（ユーザー了承済みの仕様です）。 - 新メトリクスを `AnalysisResult` と `PRMetrics` に追加し（`src/types/analysis.ts:24`, `src/labeler-types.ts:86`）、ワークフロー各ステージや失敗判定ロジックが新フィールドを受け取るよう更新しました（`src/workflow/stages/labeling.ts:23`, `src/workflow/stages/finalization.ts:107`, `src/failure-evaluator.ts:23`）。 - Actions Summary の基本メトリクスに「除外ファイルの追加行数」を出力する行を追加し、英日両ロケールを翻訳対応しました（`src/summary/formatters/basic-metrics.ts:24`, `src/locales/en/summary.json:13`, `src/locales/ja/summary.json:13`）。 - 既存テスト／スナップショットと PR メトリクス用フィクスチャをすべて新フィールドに追従させ、`__tests__/file-metrics.test.ts:507` では期待値を 50（成功ファイル分）に修正しました。 - `dist/` を再ビルドして配布物を最新化しました。
**テスト**
- `pnpm lint`
- `pnpm test`
- `pnpm build`

この変更でサイズラベルは「レビュー対象ファイルの追加行数」に基づきつつ、除外ファイルがどれだけ変更されたかも Summary から把握できるようになっています。

--- a/src/locales/ja/summary.json
+++ b/src/locales/ja/summary.json
@@ -10,6 +10,7 @@
   "basicMetrics": {
     "title": "基本メトリクス",
     "totalAdditions": "総追加行数",
+    "excludedAdditions": "除外ファイルの追加行数",
     "totalFiles": "変更ファイル数",
     "excludedFiles": "除外ファイル数",
     "binaryFilesSkipped": "バイナリファイルをスキップ",
