--- a/src/locales/en/summary.json
+++ b/src/locales/en/summary.json
@@ -10,6 +10,7 @@
   "basicMetrics": {
     "title": "Basic Metrics",
     "totalAdditions": "Total Additions",
+    "excludedAdditions": "Excluded Additions",
     "totalFiles": "Total Files Changed",
     "excludedFiles": "Excluded Files",
     "binaryFilesSkipped": "Binary files skipped",
