**実装概要** - `src/summary/summary-writer.ts:65` で Summary 用メトリクスを刷新し、折りたたみの除外ファイル一覧と適用ラベル (`appliedLabels`) を出力するようにしました。 - `src/summary/formatters/basic-metrics.ts:10` に共通ロジックを集約し、Summary 向けの `formatSummaryBasicMetrics`／コメント向けの `formatBasicMetrics` を分岐、さらに `src/summary/formatters/excluded-files.ts:7` と `src/summary/formatters/labels.ts:7` を追加して新セクションを整形しています。 - `src/workflow/stages/finalization.ts:40` で PR ラベルを先に取得し、Summary 出力にも同じ配列を渡すことでラベル表示と失敗判定の両方に再利用しています。 - 翻訳キーを `src/locales/en/summary.json:10` / `src/locales/ja/summary.json:10` に追加し、「解析対象ファイル数」と除外ファイル折りたたみ見出しを多言語化しました。 - テストとスナップショットを `__tests__/report-formatter.test.ts:202`, `__tests__/summary-writer.test.ts:88`, `__tests__/__snapshots__/report-formatter.test.ts.snap:61` で更新し、英語／日本語それぞれで新しい出力を検証しています。 - 仕様ディレクトリを `summary-metrics-enhancement` に整理し、` .kiro/specs/summary-metrics-enhancement/spec.json:1` を実装フェーズ向けに確定しました。
**テスト**
- `pnpm test:vitest -- __tests__/report-formatter.test.ts __tests__/summary-writer.test.ts`（全テストスイートが走り、完了）

**Next Steps**
1. `pnpm lint`
2. `pnpm type-check`
3. `pnpm build`

--- a/src/locales/en/summary.json
+++ b/src/locales/en/summary.json
@@ -11,7 +11,9 @@
     "title": "Basic Metrics",
     "totalAdditions": "Total Additions",
     "totalFiles": "Total Files Changed",
+    "filesAnalyzed": "Files Analyzed",
     "excludedFiles": "Excluded Files",
+    "excludedFilesDetail": "Excluded Files ({{count}})",
     "binaryFilesSkipped": "Binary files skipped",
     "filesWithErrors": "Files with errors",
     "analysisTime": "Analysis Time"
