feat(summary): Summary出力にラベルと除外メトリクスを追加
- Summary向けに基本メトリクスを再構成し、適用ラベルおよび除外ファイルの表示を追加

- FinalizationステージからSummaryへラベルを受け渡し、i18nとテスト・ビルド成果物を更新

- Kiro spec summary-metrics-enhancement を requirements/design/tasks 付きで整備

--- a/src/locales/en/summary.json
+++ b/src/locales/en/summary.json
@@ -12,7 +12,9 @@
     "totalAdditions": "Total Additions",
     "excludedAdditions": "Excluded Additions",
     "totalFiles": "Total Files Changed",
+    "filesAnalyzed": "Files Analyzed",
     "excludedFiles": "Excluded Files",
+    "excludedFilesDetail": "Excluded Files ({{count}})",
     "binaryFilesSkipped": "Binary files skipped",
     "filesWithErrors": "Files with errors",
     "analysisTime": "Analysis Time"
