--- a/src/locales/ja/logs.json
+++ b/src/locales/ja/logs.json
@@ -21,6 +21,7 @@
     "totalAdditions": "総追加行数: {{count}}",
     "complexityAnalyzing": "コード複雑度を分析中...",
     "complexityFilesToAnalyze": "分析対象ファイル数: {{count}}",
+    "complexitySkipped": "複雑度解析の対象ファイルがないためスキップします。",
     "complexityResults": "最大複雑度: {{max}}, 平均: {{avg}}, ファイル数: {{files}}",
     "complexityFailed": "コード複雑度の解析に失敗しました: {{message}}"
   },
